Show error messages in login web view regarding login process
This applies to errors not handled by Facebook only

--- a/error_message.html
+++ b/error_message.html
@@ -1,1 +1,10 @@
-<html><body><div class=error>%@</div></body></html>
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" href="error_message.css">
+    </head>
+    <body>
+        <div class="intro">%@</div>
+        <div class="error">%@</div>
+    </body>
+</html>
